[Karthi] Updated real-time telemetry
